--- a/css/style.css
+++ b/css/style.css
@@ -815,6 +815,7 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 40px;
     
     width: 528px;
     height: 581px;
@@ -868,7 +869,6 @@ footer {
     margin-top: 4px;
 }
 .form-input {
-    
     width: 448px;
     height: 40px;
     padding: 12px 11px 11px 32px;
