--- a/css/style.css
+++ b/css/style.css
@@ -653,6 +653,57 @@ footer {
     fill: #FFFFFF;
 }
 
+.footer-form-div {
+    display: block;
+    margin-left: 93px;
+    padding-top: 12px;
+}
+.footer-form-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    font-style: normal;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: var(--title-text-color);
+}
+.form-footer {
+    display: flex;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background: #2F303A;
+}
+.footer-button {
+    display: flex;
+    margin-left: 12px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    width: 200px;
+    height: 50px;
+   
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background: #2196F3;
+    color: var(--title-text-color);
+}
+.footer-btn-icon {
+    margin: 10px;
+}
+
 
 
                                     /*------------------------portfolio-hero-----------------------*/
