--- a/css/style.css
+++ b/css/style.css
@@ -669,22 +669,39 @@ footer {
     margin-bottom: 20px;
     color: var(--title-text-color);
 }
-.form-footer {
-    display: flex;
+.footer-input {
+    outline: transparent;
+    background-color: transparent;
+    margin-right: 12px;
+    margin-bottom: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 16px;
     width: 358px;
     height: 50px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background: #2F303A;
 }
 .footer-button {
-    display: flex;
-    margin-left: 12px;
-    justify-content: center;
+    display: inline-flex;
     align-items: center;
-    text-align: center;
-
+    padding: 10px 28px;
+    background-color: var(--primary-bg-color);
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    
     width: 200px;
     height: 50px;
    
@@ -694,11 +711,11 @@ footer {
     
     letter-spacing: 0.06em;
     cursor: pointer;
-    border-radius: 4px;
-    border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    background: #2196F3;
-    color: var(--title-text-color);
+}
+.footer-button:hover,
+.footer-button:focus {
+    background-color: #188CE8;
+    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-btn-icon {
     margin: 10px;
@@ -903,6 +920,7 @@ footer {
 .modal-close-button:focus,
 .modal-close-button:hover {
     fill:  #188CE8;
+    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -946,6 +964,7 @@ footer {
 }
 .form-input:focus {
     border-color: var(--primary-bg-color);
+    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-icon {
     position: absolute;
@@ -956,6 +975,7 @@ footer {
 }
 .form-input:focus + .form-icon {
     fill: var(--primary-bg-color);
+    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-textarea {
     width: 448px;
@@ -964,10 +984,22 @@ footer {
     margin-top: 4px;
     margin-bottom: 20px;
 
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: none;
     resize: none;
+}
+.form-textarea:focus {
+    border-color: var(--primary-bg-color);
+    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-label-color {
     color: var(--primary-bg-color);
@@ -996,6 +1028,8 @@ footer {
     content: '';
 }
 
+                       /* --------------submit-button-------------- */
+
 .submit-button {
     display: block;
     padding: 10px 52px;
@@ -1018,4 +1052,5 @@ footer {
 .submit-button:hover,
 .submit-button:focus {
     background-color: #188CE8;
+    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
