--- a/css/style.css
+++ b/css/style.css
@@ -1001,32 +1001,53 @@ footer {
     border-color: var(--primary-bg-color);
     transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-label-color {
-    color: var(--primary-bg-color);
-}
+
 
 
                           /*------------checkbox------------*/
 
 
-.checkbox-label {
-    position: relative;
-    padding-left: 24px;
+.checkbox-modal {
+    display: flex;
+    align-items: center;
 }
-.checkbox-label::before {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
+.checkbox-label {
+    display: flex;
+    align-items: center;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    color: var(--accent-text-color);
+}
+.checkbox-label a {
+    color: var(--primary-bg-color);
+    margin-left: 4px;
+}
+.checkbox-label span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 16px;
     height: 15px;
+    margin-right: 7px;
     border: 1px solid var(--primary-text-color);
     border-radius: 2px;
 }
-.checkbox-label::after {
-    position: absolute;
-    content: '';
+.checkbox-icon {
+    fill: transparent;
 }
+.checkbox-input:checked + .checkbox-label span {
+    background-color: var(--primary-bg-color);
+    border: none;
+}
+.checkbox-input:checked + .checkbox-label .checkbox-icon {
+    fill: var(--title-text-color);
+}
+
 
                        /* --------------submit-button-------------- */
 
