--- a/css/style.css
+++ b/css/style.css
@@ -1043,6 +1043,7 @@ footer {
 .checkbox-input:checked + .checkbox-label span {
     background-color: var(--primary-bg-color);
     border: none;
+    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox-input:checked + .checkbox-label .checkbox-icon {
     fill: var(--title-text-color);
