--- a/css/style.css
+++ b/css/style.css
@@ -927,6 +927,8 @@ footer {
                                /*---------------modal-form--------------*/
 
 .form-text {
+    margin-bottom: 12px;
+
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -938,7 +940,7 @@ footer {
 }
 .form-label {
     display: block;
-    margin-top: 12px;
+    margin-bottom: 4px;
 
     font-family: 'Roboto';
     font-style: normal;
@@ -950,12 +952,12 @@ footer {
 }
 .form-control {
     position: relative;
-    margin-top: 4px;
+    margin-bottom: 10px;
 }
 .form-input {
     width: 448px;
     height: 40px;
-    padding: 12px 11px 11px 32px;
+    padding: 12px 11px 11px 42px;
 
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -978,10 +980,11 @@ footer {
     transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-textarea {
+    display: block;
     width: 448px;
     height: 120px;
     padding: 12px;
-    margin-top: 4px;
+    margin-bottom: 20px;
 
     font-family: 'Roboto';
     font-style: normal;
@@ -1009,8 +1012,8 @@ footer {
 .checkbox-modal {
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-bottom: 30px;
-    margin-top: 20px;
 }
 .checkbox-label {
     display: flex;
