--- a/css/style.css
+++ b/css/style.css
@@ -916,11 +916,11 @@ footer {
     border: 1px solid rgba(0, 0, 0, 0.1);
 
     cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button:focus,
 .modal-close-button:hover {
     fill:  #188CE8;
-    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -963,10 +963,10 @@ footer {
     border-radius: 4px;
 
     outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus {
     border-color: var(--primary-bg-color);
-    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-icon {
     position: absolute;
@@ -974,10 +974,10 @@ footer {
     left: 15px;
     transform: translateY(-50%);
     fill: currentColor;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus + .form-icon {
     fill: var(--primary-bg-color);
-    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-textarea {
     display: block;
@@ -998,10 +998,10 @@ footer {
     border-radius: 4px;
     outline: none;
     resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-textarea:focus {
     border-color: var(--primary-bg-color);
-    transition: box-shadow 250ms, background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
